Use VirtualThreadPerTaskExecutor as CompletableFuture ExecutorService